--- a/curso 2 logica/desenhacorreção.html
+++ b/curso 2 logica/desenhacorreção.html
@@ -13,7 +13,7 @@
 
     function desenhaCirculo(x, y, raio, cor) {
 
-        pincel.fillStyle = cor;
+        pincel.fillStyle = cor; // o padrão é blue
         pincel.beginPath();
         pincel.arc(x, y, raio, 0, 2 * 3.14);
         pincel.fill();
@@ -30,14 +30,14 @@
 
     function lidaComMovimentoDoMouse(evento) {
 
-        x = evento.pageX - tela.offsetLeft;
-        y = evento.pageY - tela.offsetTop;
+        var x = evento.pageX - tela.offsetLeft;
+        var y = evento.pageY - tela.offsetTop;
 
+        // usando a nova função 
         if(desenha && podeDesenharNaArea(x,y)) {
 
-            desenhaCirculo(x, y, raio, corAtual);
+            desenhaCirculo(x, y, 5, corAtual);
         }
-
     }
 
     function habilitaDesenhar() {
@@ -52,25 +52,35 @@
 
     function podeDesenharNaArea(x, y) {
 
-        if(x >= 0 && x < 3*tamanhoQuadrados && y >= 0 && y < tamanhoQuadrados) {
-        return false;
+         if(x >= 0 && x < 3*tamanhoQuadrados && y >= 0 && y < tamanhoQuadrados) {
+            return false;
         } else {
-        return true;
+            return true;
         }
     }
 
-    function trocaCor(){
-        if((x > 0) && (x < 50) && (y > 0) && (y < 50)) {
-            corAtual = 'red';
-            console.log(corAtual);
-        }
-        if((x > 50) && (x < 100) && (y > 0) && (y < 50)) {
-            corAtual = 'green';
-            console.log(corAtual);
-        }
-        if((x > 100) && (x < 150) && (y > 0) && (y < 50)) {
-            corAtual = 'blue';
-            console.log(corAtual);
+function selecionaCor(evento) {
+
+        var x = evento.pageX - tela.offsetLeft;
+        var y = evento.pageY - tela.offsetTop;
+
+        // cada condição muda a variável `corAtual`
+
+        // começamos pela condição do y que é igual em todos os casos
+        if (y > yQuadrados && y < yQuadrados + tamanhoQuadrados) {
+
+            if (x > xVermelho && x < xVermelho + tamanhoQuadrados) {
+
+                corAtual = 'red';
+
+            } else if (x > xVerde && x < xVerde + tamanhoQuadrados) {
+
+                corAtual = 'green';
+
+            } else if (x > xAzul && x < xAzul + tamanhoQuadrados) {
+
+                corAtual = 'blue';
+            }
         }
     }
 
@@ -79,8 +89,6 @@
     pincel.fillStyle = 'lightgray';
     pincel.fillRect(0, 0, 600, 400);
 
-    var x;
-    var y;    
     var desenha = false;
     var corAtual = 'blue';
     var xVermelho = 0;
@@ -88,9 +96,8 @@
     var xAzul = 100;
     var yQuadrados = 0;
     var tamanhoQuadrados = 50;
-    var raio = 5
 
-    desenhaPaletaDeCores(); // mostra os quadrados de seleção de cores
+    desenhaPaletaDeCores();
 
     tela.onmousemove = lidaComMovimentoDoMouse;
 
@@ -98,6 +105,6 @@
 
     tela.onmouseup = desabilitaDesenhar;
 
-    tela.onclick = trocaCor;
+    tela.onclick = selecionaCor;
 
 </script>
